Update Controller Service and Repository Layer for the feature info